# pixi-docker-extension

./: .gitignore  Cargo.toml  README.md  pixi.toml
.github/workflows/: ci.yml  release.yml
example/: README.md  pixi.toml  pixi_docker.toml
example/src/: main.py
example/static/: index.html
example/tests/: test_main.py
src/: config.rs  main.rs  pixi.rs  template.rs
templates/: Dockerfile.j2
tests/: integration_test.rs
tests/fixtures/: basic_config.toml  config_with_template.toml  multi_env_config.toml  test_pixi.toml  test_template.j2
